TestSuite/Syntax/Errors/DepLoop5.tjp
project prj "Loop Detector Test" "$Id" 2000-01-01 2000-01-04

task t1 "Task1" {
	start 2000-01-01
	
	task s1 "Sub1" {
		length 1d
		preceeds !!t2
	}
}

task t2 "Task2" {
  length 1d
	depends !t1
}

